# google_chat_webhook

./: Cargo.toml  README  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: chat_service.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/models/: message.rs  mod.rs
src/domain/repositories/: external_api.rs  mod.rs
src/infrastructure/: api_client.rs  error_handling.rs  mess_serialization.rs  mod.rs  post.rs
