[package]
name = "chat_webhook"
version = "0.1.0"
edition = "2021"
authors = ["konattsu"]

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
reqwest = {version = "0.12.7", features = ["rustls-tls", "blocking"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json ={ version = "1.0.128"}
dotenv = "0.15"
thiserror = "1.0.0"
