[package]
name = "google_chat_webhook"
version = "0.3.0"
edition = "2021"
authors = ["konattsu"]

[dependencies]
reqwest = {version = "0.12.7", features = ["rustls-tls", "blocking"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = { version = "1.0.128"}
thiserror = "1.0.0"
async-trait = "0.1.82"

[features]
default = []
blocking = []
